--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "config": "^4.1.1",
+    "debug": "^4.4.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "sharp": "^0.34.3",
     "zod": "^4.1.4"
   },
   "devDependencies": {
